--- a/login.css
+++ b/login.css
@@ -9,6 +9,7 @@ body{
     background-color: #ad131f;
     display: flex;
     justify-content: center;
+    border-bottom: #eda43d 3px solid;
 }
 .header .container{
     width: 80%;
@@ -56,9 +57,21 @@ body{
     width: 70%;
     height: 60%;
     background-color: #03497a;
+    border: solid 1px black;
 }
 .footer{
     width: 100%;
     height: 70px;
     background-color: #ad131f;
+    border-top: #eda43d solid 3px ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer h3{
+    margin: 0;
+    padding: 0;
+    color: #eda43d;
+    -webkit-text-stroke-width: 0.3px;
+    -webkit-text-stroke-color: black;
 }
