--- a/login.css
+++ b/login.css
@@ -59,6 +59,50 @@ body{
     background-color: #03497a;
     border: solid 1px black;
 }
+.caixa h1{
+    color: #fafafa;
+    display: flex;
+    justify-content: center;
+    font-size: 35px;
+    -webkit-text-stroke-width: 0.35px;
+    -webkit-text-stroke-color: black;
+}
+.caixa .formulario{
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+}
+.caixa form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 70%;
+}
+.caixa input{
+    height: 22%;
+    width: 54%;
+    border-radius: 15px;
+    font-size: 18px;
+    border: #eda43d solid 2px;
+}
+#btn{
+    align-self: center;
+    height: 40px;
+    width: 31%;
+    font-size: 20px;
+    border-radius: 10px;
+    background-color: #fafafa;
+    color: #eda43d;
+    border:#eda43d solid 2px;
+    font-weight: 600;
+}
+.caixa .create_account{
+    color: #fafafa;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .footer{
     width: 100%;
     height: 70px;
