--- a/login.css
+++ b/login.css
@@ -4,6 +4,9 @@ body{
     background-color: #e3e5e2;
     font-family: Arial, Helvetica, sans-serif;
 }
+a{
+    text-decoration: none;
+}
 .header{
     height: 100px;
     background-color: #ad131f;
@@ -102,6 +105,9 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.create_account a{
+    color: #fafafa;
 }
 .footer{
     width: 100%;
