--- a/confirmacao.css
+++ b/confirmacao.css
@@ -45,19 +45,16 @@ a{
     width: 75%;
     height: 90%;
     background-color: #03497a;
-    border: black solid 1px;
-}
-.cad_media h1{
-    display: flex;
-    justify-content: center;
     color: #fafafa;
-    margin: 0;
-    padding: 0;
-    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
 }
-
-
-
+.cad_media u{
+    color: #fafafa;
+}
 .footer{
     width: 100%;
     height: 70px;
