--- a/cadastro.css
+++ b/cadastro.css
@@ -42,10 +42,11 @@ a{
     align-items: center;
 }
 .cad_media{
-    width: 75%;
+    width: 50%;
     height: 90%;
     background-color: #03497a;
     border: black solid 1px;
+    border-radius: 15px;
 }
 .cad_media h1{
     display: flex;
@@ -54,10 +55,50 @@ a{
     margin: 0;
     padding: 0;
     margin-top: 15px;
+    -webkit-text-stroke-width: 0.2px;
+    -webkit-text-stroke-color: black;
+}
+.box{
+    color: #fafafa;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.entrada{
+    margin-top: 10px;
+}
+.label_input{
+    font-size: 25px;
+}
+select{
+    height: 30px;
+    width: 220px;
+    border-radius: 10px;
+    font-size: 17px;
+}
+input{
+    height: 30px;
+    width: 220px;
+    border-radius: 10px;
+    outline: none;
+    font-size: 17px;
+}
+#formulario{
+    display: contents;
 }
 
-
-
+button{
+    margin-top: 15px;
+    height: 35px;
+    width: 170px;
+    border-radius:10px;
+    font-size: 17px;
+    font-weight: 600;
+    border: 0.5px solid #ad131f;
+    color: #ad131f;
+}
 .footer{
     width: 100%;
     height: 70px;
