--- a/api-site/public/login.css
+++ b/api-site/public/login.css
@@ -19,6 +19,7 @@ a{
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     
 }
 .header h1{
@@ -29,75 +30,93 @@ a{
     -webkit-text-stroke-width: 0.2px;
     -webkit-text-stroke-color: black;
 }
-.cadastro{
+.header h3{
+    margin: 0;
+    padding: 0;
+    color: #fafafa;
+    -webkit-text-stroke-width: 0.2px;
+    -webkit-text-stroke-color: black;
+}
+.login{
     height: 800px;
     display: flex;
     justify-content: center;
 }
-.cadastro .container{
+.login .container{
     height: 100%;
     width: 90%;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
-.cad_media{
+.login .logo{
+    height: 100%;
     width: 50%;
-    height: 90%;
-    background-color: #03497a;
-    border: black solid 1px;
-    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.cad_media h1{
+.login .logo img{
+    height: 60%;
+}
+.login .entrada{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.login .caixa{
+    width: 70%;
+    height: 60%;
+    background-color: #03497a;
+    border: solid 1px black;
+    border-radius:15px ;
+}
+.caixa h1{
+    color: #fafafa;
     display: flex;
     justify-content: center;
-    color: #fafafa;
-    margin: 0;
-    padding: 0;
-    margin-top: 15px;
-    -webkit-text-stroke-width: 0.2px;
+    font-size: 35px;
+    -webkit-text-stroke-width: 0.35px;
     -webkit-text-stroke-color: black;
 }
-.box{
+.caixa .formulario{
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+}
+.caixa form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 70%;
+}
+.caixa input{
+    height: 22%;
+    width: 54%;
+    border-radius: 15px;
+    font-size: 18px;
+    border: #eda43d solid 2px;
+}
+#btn{
+    align-self: center;
+    height: 40px;
+    width: 31%;
+    font-size: 20px;
+    border-radius: 10px;
+    background-color: #fafafa;
+    color: #eda43d;
+    border:#eda43d solid 2px;
+    font-weight: 600;
+}
+.caixa .create_account{
     color: #fafafa;
-    height: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
-.entrada{
-    margin-top: 10px;
-}
-.label_input{
-    font-size: 25px;
-}
-select{
-    height: 30px;
-    width: 220px;
-    border-radius: 10px;
-    font-size: 17px;
-}
-input{
-    height: 30px;
-    width: 220px;
-    border-radius: 10px;
-    outline: none;
-    font-size: 17px;
-}
-#form_cadastro{
-    display: contents;
-}
-
-button{
-    margin-top: 15px;
-    height: 35px;
-    width: 170px;
-    border-radius:10px;
-    font-size: 17px;
-    font-weight: 600;
-    border: 0.5px solid #ad131f;
-    color: #ad131f;
+.create_account a{
+    color: #fafafa;
 }
 .footer{
     width: 100%;
