--- a/api-site/public/css/feed.css
+++ b/api-site/public/css/feed.css
@@ -6,6 +6,7 @@ body{
 }
 a{
     text-decoration: none;
+    color: #fafafa;
 }
 .header{
     height: 100px;
@@ -19,8 +20,18 @@ a{
     height: 100%;
     display: flex;
     align-items: center;
-    
+    justify-content: space-between;
 }
+.navbar{
+    color: white;
+     display: flex;
+     flex-direction: row;
+     justify-content: space-evenly;
+     width: 600px;
+     list-style: none;
+     font-weight: 600;
+ }
+ 
 .header h1{
     margin: 0;
     padding: 0;
