--- a/api-site/public/css/feed.css
+++ b/api-site/public/css/feed.css
@@ -63,6 +63,7 @@ a{
     width: 680px;
     height: 181px;
     font-size: 15px;
+    outline: none;
     font-family: Arial, Helvetica, sans-serif;
 }
 #feed{
