--- a/api-site/public/css/analytics.css
+++ b/api-site/public/css/analytics.css
@@ -51,7 +51,24 @@ a{
     background-color: rgba(0,0,0,0.2);
     border: 1px solid black;
     box-shadow: 2px 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .cadastro .container h1{
-    text-align: center;   
+    text-align: center; 
+    background-color: #03497a;
+    padding: 15px;
+    border-radius: 10px;
+    color: #fafafa;
+    -webkit-text-stroke-width: 0.2px;
+    -webkit-text-stroke-color: black;
+    float: left;  
+}
+
+.graph{
+    display: inline-block;
+    height: 60%;
+    width: 100%;
+    margin-top: 50px;
 }
